# personal-website

./: .gitignore  BodyPart.hpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  drawCircle.cpp  drawCircle.hpp  fish.cpp  fish.hpp  fish.js  fish.wasm  index.html  main.cpp  main.data  main.html  main.js  main.wasm  positionMath.hpp  projectStyles.css  style.css  vercel.json
chess/: engine.js  index.html  scripts.js
chess/lib/chessboardjs-1.0.0/js/: chessboard-1.0.0.js
cs417/: index.html
cs417/project1/: index.html
cs417/project2/: index.html
cs417/project3/: index.html
cs417/project4/: index.html
cs417/project5/: index.html
cs417/project6/: index.html
